rename RPC method
