# openapi.yaml
@@ -6,11 +6,11 @@ info:
     title: Query API
     version: 0.0.1
 paths:
-    /v1/wordcount:
+    /v1/wordcounts:
         get:
             tags:
                 - Query
-            operationId: Query_QueryWordCount
+            operationId: Query_ListWordCounts
             parameters:
                 - name: word
                   in: query
@@ -31,7 +31,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/QueryWordCountResponse'
+                                $ref: '#/components/schemas/ListWordCountsResponse'
                 default:
                     description: Default error response
                     content:
@@ -48,28 +48,15 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        QueryWordCountResponse:
+        ListWordCountsResponse:
             type: object
             properties:
-                rows:
+                wordCounts:
                     type: array
                     items:
-                        $ref: '#/components/schemas/QueryWordCountRow'
+                        $ref: '#/components/schemas/WordCount'
                 nextPageToken:
                     type: string
-        QueryWordCountRow:
-            type: object
-            properties:
-                corpus:
-                    type: string
-                corpusDate:
-                    type: integer
-                    format: int32
-                word:
-                    type: string
-                wordCount:
-                    type: integer
-                    format: int32
         Status:
             type: object
             properties:
@@ -86,5 +73,18 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        WordCount:
+            type: object
+            properties:
+                corpus:
+                    type: string
+                corpusDate:
+                    type: integer
+                    format: int32
+                word:
+                    type: string
+                wordCount:
+                    type: integer
+                    format: int32
 tags:
     - name: Query
